third_party/blink/web_tests/paint/invalidation/svg/relative-sized-shadow-tree-content-with-symbol.xhtml
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<script src="../resources/text-based-repaint.js"></script>
</head>
<body onload="runRepaintAndPixelTest()">
    <p>The svg area contained in the div element (red box), should fill out the whole area (two green rectangles, first: (0,0)-(50%,50%), second: (50%,50%)-(100%,100%)), especially after resizing the content box to a different size</p>
    <div id="contentBox" style="width: 100px; height: 400px; border: 1px solid red;">
        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%">
            <defs>
                <symbol id="targetSymbol" viewBox="0 0 200 200">
                    <rect x="50%" y="50%" width="50%" height="50%" fill="green"/>
                    <rect width="100" height="100" fill="green"/>
                </symbol>
            </defs>
            <use xlink:href="#targetSymbol"/>
        </svg>
    </div>
    <script>
        function repaintTest() {
            document.getElementById("contentBox").style.setProperty("width", "400px");
        }
    </script>
</body>
</html>
